--- a/Zympark/package.json
+++ b/Zympark/package.json
@@ -19,8 +19,9 @@
     "@angular/platform-browser-dynamic": "~12.1.0-",
     "@angular/router": "~12.1.0-",
     "@popperjs/core": "^2.9.3",
-    "bootstrap": "^5.1.0",
-    "jquery": "^3.6.0",
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
